--- a/public/style.css
+++ b/public/style.css
@@ -505,7 +505,7 @@ table {
   border-collapse: collapse;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -513,7 +513,7 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: inherit;
-}
+} */
 
 /**
  * Reset links to optimize for opt-in styling instead of
