--- a/src/styles/pages/landing.css
+++ b/src/styles/pages/landing.css
@@ -1,5 +1,10 @@
 #page-landing {
-  background: linear-gradient(90deg, rgba(255,246,121,1) 19%, rgba(251,220,54,1) 51%, rgba(251,219,51,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 246, 121, 1) 19%,
+    rgba(251, 220, 54, 1) 51%,
+    rgba(251, 219, 51, 1) 100%
+  );
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -10,10 +15,10 @@
 #page-landing .content-wrapper {
   position: relative;
   width: 100%;
-  max-width: 1100px;
+  max-width: 1150px;
 
   height: 100%;
-  max-width: 680px;
+  max-height: 680px;
 
   display: flex;
   align-items: flex-start;
@@ -23,6 +28,34 @@
   background: url(../../images/ride.svg) no-repeat 80% center;
 }
 
+.content-wrapper .location {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 24px;
+  line-height: 34px;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  color: #945fbd;
+}
+
+#page-landing .content-wrapper main {
+  max-width: 350px;
+}
+
+#page-landing .content-wrapper main h1 {
+  font-size: 76px;
+  font-weight: 900;
+  line-height: 70px;
+}
+
+#page-landing .content-wrapper main p {
+  margin-top: 40px;
+  font-size: 24px;
+  line-height: 34px;
+}
+
 .content-wrapper .enter-app {
   position: absolute;
   right: 0;
@@ -30,7 +63,7 @@
 
   width: 80px;
   height: 80px;
-  background-color: #945FBD;
+  background-color: #945fbd;
   border-radius: 30px;
 
   display: flex;
@@ -40,5 +73,5 @@
 }
 
 .content-wrapper .enter-app:hover {
-  background-color: #7D3CAF;
+  background-color: #7d3caf;
 }
