--- a/src/styles/pages/stylesPopup.css
+++ b/src/styles/pages/stylesPopup.css
@@ -1,7 +1,7 @@
 #page-map .map-popup .leaflet-popup-content-wrapper {
-  background-color: 'rgba(255, 255, 255, 0.8)';
-  border-radius: '20px';
-  box-shadow: 'none',;
+  background-color: "rgba(255, 255, 255, 0.8)";
+  border-radius: "20px";
+  box-shadow: "none";
 }
 
 #page-map .map-popup .leaflet-popup-content {
